@@ -29,6 +29,7 @@ namespace Stetic {
 			editors[typeof (double)] = typeof (Stetic.Editor.FloatRange);
 			editors[typeof (char)] = typeof (Stetic.Editor.Char);
 			editors[typeof (string)] = typeof (Stetic.Editor.String);
+			editors[typeof (Gdk.Color)] = typeof (Stetic.Editor.Color);
 		}
 
 		static public PropertyEditor MakeEditor (PropertyDescriptor prop, ParamSpec pspec, object obj)
